--- a/To-Do-Web-App-master/client/package.json
+++ b/To-Do-Web-App-master/client/package.json
@@ -20,9 +20,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false --reporters=default --reporters=jest-junit",
+
+"test:todotest": "react-scripts test --watchAll=false --testPathPattern=todotest --reporters=default --reporters=jest-junit",
+
     "eject": "react-scripts eject"
+    
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest-junit": {
+    "output": "reports/junit.xml"
   }
+
 }
